# mylingo

./: .gitignore  Cargo.toml  README.md
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: tauri.ts
config/: sources.toml
crates/linguaforge-api/: Cargo.toml
crates/linguaforge-api/src/: main.rs
crates/linguaforge-cli/: Cargo.toml
crates/linguaforge-cli/src/: courses.rs  main.rs  migrate.rs  publish.rs  quality.rs  stage.rs
crates/linguaforge-core/: Cargo.toml
crates/linguaforge-core/src/: lib.rs  manifest.rs  sources.rs  staging.rs  workspace.rs
docs/: architecture.md  execution-plan.md
sql/: content_init.sql  progress_init.sql
