[workspace]
members = [
    "crates/linguaforge-api",
    "crates/linguaforge-cli",
    "crates/linguaforge-core",
]
exclude = ["apps/desktop/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["OpenCode"]

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
flate2 = "1.1"
futures-util = "0.3"
quick-xml = "0.38"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-normalization = "0.1"
url = "2.5"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
