[package]
name = "linguaforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
flate2.workspace = true
futures-util.workspace = true
linguaforge-core = { path = "../linguaforge-core" }
quick-xml.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-normalization.workspace = true
zip.workspace = true
