[package]
name = "linguaforge-desktop"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
unicode-normalization = "0.1"

[lib]
name = "linguaforge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
